--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Ron Largett Jr.</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cinzel:400,700|Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
