updated header style to be mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="wrapper">
-  <div class="header hidden-xs"></div>
+  <div class="header"></div>
   <div class="portrait"></div>
   <h1>Ron Largett Jr</h1>
   <p>Welcome to my portfolio website.</p>
