--- a/index.html
+++ b/index.html
@@ -111,7 +111,16 @@
                         <h3 class="modal-title" id="myModalLabel">Dylans RV</h3>
                     </div>
                     <div class="modal-body">
-                        <img src="img/luxury-redesign-home-01.jpg" class="img-responsive" alt="">
+                        <h4>Home Page</h4>
+                        <p><img src="img/dylans-rv-home.jpg" class="img-responsive" alt=""></p>
+                        <h4>Mega Dropdown Menu</h4>
+                        <p><img src="img/dylans-rv-dropdown.jpg" class="img-responsive" alt=""></p>
+                        <h4>Mega Dropdown Menu: Hover Effect</h4>
+                        <p><img src="img/dylans-rv-dropdown-hover.jpg" class="img-responsive" alt=""></p>
+                        <h4>Inventory List</h4>
+                        <p><img src="img/dylans-rv-inventory-list.jpg" class="img-responsive" alt=""></p>
+                        <h4>Inventory Detail</h4>
+                        <p><img src="img/dylans-rv-inventory-detail.jpg" class="img-responsive" alt=""></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
