added more winter haven images

--- a/index.html
+++ b/index.html
@@ -136,7 +136,14 @@
                         <h3 class="modal-title" id="myModalLabel">Deltona Realty of Winter Haven</h3>
                     </div>
                     <div class="modal-body">
-                        <img src="img/Deltona Realty at Winter Haven home.jpeg" class="img-responsive" alt="">
+                        <h4>Home Page</h4>
+                        <p><img src="img/deltona-realty-winter-haven-home.jpeg" class="img-responsive" alt=""></p>
+                        <h4>Dropdown Menu</h4>
+                        <p><img src="img/deltona-realty-winter-haven-dropdown.jpeg" class="img-responsive" alt=""></p>
+                        <h4>Inner Page</h4>
+                        <p><img src="img/deltona-realty-winter-haven-inner.jpeg" class="img-responsive" alt=""></p>
+                        <h4>Listings Page</h4>
+                        <p><img src="img/deltona-realty-winter-haven-listings.jpeg" class="img-responsive" alt=""></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
