--- a/index.html
+++ b/index.html
@@ -86,103 +86,111 @@
                 </div>
             </form>
         </div>
-        <!-- Modal -->
-        <div class="modal fade" id="portfolioDigestOfHomes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h3 class="modal-title" id="myModalLabel">Digest of Homes</h3>
-                    </div>
-                    <div class="modal-body">
-                        <img src="img/home-v02.1.jpg" class="img-responsive" alt="">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
+    </div>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <p>Built with <a href="http://sass-lang.com/" target="_blank">SASS</a>, <a href="https://prepros.io/" target="_blank">Prepros</a>, <a href="http://getbootstrap.com/" target="_blank">Bootstrap 3</a>, <a href="https://formspree.io/" target="_blank">Formspree</a> and hosted on <a href="https://pages.github.com/" target="_blank">Github Pages</a>.</p>
+        </div>
+      </div>
+    </footer>
+    <!-- Modal -->
+    <div class="modal fade" id="portfolioDigestOfHomes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title" id="myModalLabel">Digest of Homes</h3>
+                </div>
+                <div class="modal-body">
+                    <img src="img/home-v02.1.jpg" class="img-responsive" alt="">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="portfolioDylans" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h3 class="modal-title" id="myModalLabel">Dylans RV</h3>
-                    </div>
-                    <div class="modal-body">
-                        <h4>Home Page</h4>
-                        <p><img src="img/dylans-rv-home.jpg" class="img-responsive" alt=""></p>
-                        <h4>Mega Dropdown Menu</h4>
-                        <p><img src="img/dylans-rv-dropdown.jpg" class="img-responsive" alt=""></p>
-                        <h4>Mega Dropdown Menu: Hover Effect</h4>
-                        <p><img src="img/dylans-rv-dropdown-hover.jpg" class="img-responsive" alt=""></p>
-                        <h4>Inventory List</h4>
-                        <p><img src="img/dylans-rv-inventory-list.jpg" class="img-responsive" alt=""></p>
-                        <h4>Inventory Detail</h4>
-                        <p><img src="img/dylans-rv-inventory-detail.jpg" class="img-responsive" alt=""></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
+    </div>
+    <div class="modal fade" id="portfolioDylans" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title" id="myModalLabel">Dylans RV</h3>
+                </div>
+                <div class="modal-body">
+                    <h4>Home Page</h4>
+                    <p><img src="img/dylans-rv-home.jpg" class="img-responsive" alt=""></p>
+                    <h4>Mega Dropdown Menu</h4>
+                    <p><img src="img/dylans-rv-dropdown.jpg" class="img-responsive" alt=""></p>
+                    <h4>Mega Dropdown Menu: Hover Effect</h4>
+                    <p><img src="img/dylans-rv-dropdown-hover.jpg" class="img-responsive" alt=""></p>
+                    <h4>Inventory List</h4>
+                    <p><img src="img/dylans-rv-inventory-list.jpg" class="img-responsive" alt=""></p>
+                    <h4>Inventory Detail</h4>
+                    <p><img src="img/dylans-rv-inventory-detail.jpg" class="img-responsive" alt=""></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="portfolioDeltonaWinterHaven" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h3 class="modal-title" id="myModalLabel">Deltona Realty of Winter Haven</h3>
-                    </div>
-                    <div class="modal-body">
-                        <h4>Home Page</h4>
-                        <p><img src="img/deltona-realty-winter-haven-home.jpeg" class="img-responsive" alt=""></p>
-                        <h4>Dropdown Menu</h4>
-                        <p><img src="img/deltona-realty-winter-haven-dropdown.jpeg" class="img-responsive" alt=""></p>
-                        <h4>Inner Page</h4>
-                        <p><img src="img/deltona-realty-winter-haven-inner.jpeg" class="img-responsive" alt=""></p>
-                        <h4>Listings Page</h4>
-                        <p><img src="img/deltona-realty-winter-haven-listings.jpeg" class="img-responsive" alt=""></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
+    </div>
+    <div class="modal fade" id="portfolioDeltonaWinterHaven" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title" id="myModalLabel">Deltona Realty of Winter Haven</h3>
+                </div>
+                <div class="modal-body">
+                    <h4>Home Page</h4>
+                    <p><img src="img/deltona-realty-winter-haven-home.jpeg" class="img-responsive" alt=""></p>
+                    <h4>Dropdown Menu</h4>
+                    <p><img src="img/deltona-realty-winter-haven-dropdown.jpeg" class="img-responsive" alt=""></p>
+                    <h4>Inner Page</h4>
+                    <p><img src="img/deltona-realty-winter-haven-inner.jpeg" class="img-responsive" alt=""></p>
+                    <h4>Listings Page</h4>
+                    <p><img src="img/deltona-realty-winter-haven-listings.jpeg" class="img-responsive" alt=""></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="portfolioMoneco" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h3 class="modal-title" id="myModalLabel">Moneco Advisors</h3>
-                    </div>
-                    <div class="modal-body">
-                        <img src="img/moneco-homepage.jpg" class="img-responsive" alt="">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
+    </div>
+    <div class="modal fade" id="portfolioMoneco" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3 class="modal-title" id="myModalLabel">Moneco Advisors</h3>
+                </div>
+                <div class="modal-body">
+                    <img src="img/moneco-homepage.jpg" class="img-responsive" alt="">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script>
-        var biggestHeight = 0;
-        // Loop through elements children to find & set the biggest height
-        $(".contact *").each(function() {
-            // If this elements height is bigger than the biggestHeight
-            if ($(this).height() > biggestHeight) {
-                // Set the biggestHeight to this Height
-                biggestHeight = $(this).height();
-            }
-        });
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script>
+    var biggestHeight = 0;
+    // Loop through elements children to find & set the biggest height
+    $(".contact *").each(function() {
+        // If this elements height is bigger than the biggestHeight
+        if ($(this).height() > biggestHeight) {
+            // Set the biggestHeight to this Height
+            biggestHeight = $(this).height();
+        }
+    });
 
-        // Set the contact height
-        $(".contact").height(biggestHeight);
-        </script>
+    // Set the contact height
+    $(".contact").height(biggestHeight);
+    </script>
 </body>
 
 </html>
