added experience section
adding experience section with timeline

--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
         <h1>Ron Largett Jr</h1>
         <!-- <p><a href="./pdf/resume.pdf" class="btn btn-primary" target="_blank">My Resume</a></p> -->
         <p>Welcome to my portfolio website.</p>
+        <div class="experience container-fluid">
+            <h2>My Experience</h2>
+            <div class="experience--wrapper">
+                <div class="experience--card-step1">
+                    <div class="head">
+                        <h3>Platinum Strategies<small>2015/03 - current</small></h3>
+                    </div>
+                    <div class="body">
+                        <ul>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="experience--card-step2">
+                    <div class="head">
+                        <h3>NetSource Technologies<small>2012/07 - 2015/03</small></h3>
+                    </div>
+                    <div class="body">
+                        <ul>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="experience--card-step3">
+                    <div class="head">
+                        <h3>Maranatha Fellowship Church<small>2003/11 - 2012/07</small></h3>
+                    </div>
+                    <div class="body">
+                        <ul>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                            <li>responsibility</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="portfolio container-fluid">
             <h2>My Portfolio</h2>
             <div class="row">
