added experience info titles, and responsibilities

--- a/index.html
+++ b/index.html
@@ -21,39 +21,42 @@
         <div class="experience container-fluid">
             <h2>My Experience</h2>
             <div class="experience--wrapper">
-                <div class="experience--card-step1">
+                <div class="experience--card">
                     <div class="head">
-                        <h3>Platinum Strategies<small>2015/03 - current</small></h3>
+                        <h3>Platinum Strategies<small>03/2015 - current</small></h3>
                     </div>
                     <div class="body">
+                        <h4>Senior Web Designer</h4>
                         <ul>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
+                            <li>Design and code multiple financial advisor's websites</li>
+                            <li>Troubleshoot and rework design workflow</li>
+                            <li>Create and organize reusable code snippets</li>
                         </ul>
                     </div>
                 </div>
-                <div class="experience--card-step2">
+                <div class="experience--card">
                     <div class="head">
-                        <h3>NetSource Technologies<small>2012/07 - 2015/03</small></h3>
+                        <h3>NetSource Technologies<small>07/2012 - 03/2015</small></h3>
                     </div>
                     <div class="body">
+                        <h4>Web Designer</h4>
                         <ul>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
+                            <li>Design, code, and manage multiple client websites</li>
+                            <li>Design client banners, brochures, flyers, and logos</li>
                         </ul>
                     </div>
                 </div>
-                <div class="experience--card-step3">
+                <div class="experience--card">
                     <div class="head">
-                        <h3>Maranatha Fellowship Church<small>2003/11 - 2012/07</small></h3>
+                        <h3>Maranatha Fellowship Church<small>11/2003 - 07/2012</small></h3>
                     </div>
                     <div class="body">
+                        <h4>Graphic and Web Designer</h4>
                         <ul>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
-                            <li>responsibility</li>
+                            <li>Design, code and manage multiple church websites</li>
+                            <li>Design ministry banners, brochures, flyers and logos</li>
+                            <li>Edit and upload audio files for weekly podcast</li>
+                            <li>Record staff training videos for website maintenance</li>
                         </ul>
                     </div>
                 </div>
