--- a/index.html
+++ b/index.html
@@ -18,46 +18,48 @@
         <h1>Ron Largett Jr</h1>
         <!-- <p><a href="./pdf/resume.pdf" class="btn btn-primary" target="_blank">My Resume</a></p> -->
         <p>Welcome to my portfolio website.</p>
-        <div class="experience container-fluid">
+        <div class="experience">
             <h2>My Experience</h2>
-            <div class="experience--wrapper">
-                <div class="experience--card">
-                    <div class="head">
-                        <h3>Platinum Strategies<small>03/2015 - current</small></h3>
+            <div class="experience--bg container-fluid">
+                <div class="experience--wrapper">
+                    <div class="experience--card">
+                        <div class="head">
+                            <h3>Platinum Strategies<small>03/2015 - current</small></h3>
+                        </div>
+                        <div class="body">
+                            <h4>Senior Web Designer</h4>
+                            <ul>
+                                <li>Design and code multiple financial advisor's websites</li>
+                                <li>Troubleshoot and rework design workflow</li>
+                                <li>Create and organize reusable code snippets</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="body">
-                        <h4>Senior Web Designer</h4>
-                        <ul>
-                            <li>Design and code multiple financial advisor's websites</li>
-                            <li>Troubleshoot and rework design workflow</li>
-                            <li>Create and organize reusable code snippets</li>
-                        </ul>
+                    <div class="experience--card">
+                        <div class="head">
+                            <h3>NetSource Technologies<small>07/2012 - 03/2015</small></h3>
+                        </div>
+                        <div class="body">
+                            <h4>Web Designer</h4>
+                            <ul>
+                                <li>Design, code, and manage multiple client websites</li>
+                                <li>Design client banners, brochures, flyers, and logos</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="experience--card">
-                    <div class="head">
-                        <h3>NetSource Technologies<small>07/2012 - 03/2015</small></h3>
-                    </div>
-                    <div class="body">
-                        <h4>Web Designer</h4>
-                        <ul>
-                            <li>Design, code, and manage multiple client websites</li>
-                            <li>Design client banners, brochures, flyers, and logos</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="experience--card">
-                    <div class="head">
-                        <h3>Maranatha Fellowship Church<small>11/2003 - 07/2012</small></h3>
-                    </div>
-                    <div class="body">
-                        <h4>Graphic and Web Designer</h4>
-                        <ul>
-                            <li>Design, code and manage multiple church websites</li>
-                            <li>Design ministry banners, brochures, flyers and logos</li>
-                            <li>Edit and upload audio files for weekly podcast</li>
-                            <li>Record staff training videos for website maintenance</li>
-                        </ul>
+                    <div class="experience--card">
+                        <div class="head">
+                            <h3>Maranatha Fellowship Church<small>11/2003 - 07/2012</small></h3>
+                        </div>
+                        <div class="body">
+                            <h4>Graphic and Web Designer</h4>
+                            <ul>
+                                <li>Design, code and manage multiple church websites</li>
+                                <li>Design ministry banners, brochures, flyers and logos</li>
+                                <li>Edit and upload audio files for weekly podcast</li>
+                                <li>Record staff training videos for website maintenance</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
