--- a/index.html
+++ b/index.html
@@ -266,19 +266,19 @@
 
     // Open Experience Section
     $('.experience--bg').hide();
-    $('.experience h2').text('View My Experience').addClass('link');
-    $('.experience h2').on('click', function(){
+    $('<span class="experience--button">Open</span>').insertAfter('.experience--bg');
+    $('.experience--button').on('click', function(){
         var link = $(this);
-      $(this).next().slideToggle(400, function(){
+      $(this).prev().slideToggle(400, function(){
         if ($(this).is(':visible')){
-            link.text('Hide My Experience');
+            link.text('Close');
             // check_if_in_view();
         } else {
-            link.text('View Experience');
+            link.text('Open');
             $(window).scrollTop($(window).scrollTop()+1);
         }
       });
-      //$(this).toggleClass('active');
+      $(this).toggleClass('open');
       //$(this).text('Projects Viewed');
     });
 
